--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -26,6 +26,7 @@ pickleshare==0.7.5
 pilkit==2.0
 Pillow==7.1.2
 pkg-resources==0.0.0
+pprint==0.1
 prompt-toolkit==3.0.5
 ptyprocess==0.6.0
 Pygments==2.6.1
