--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -12,22 +12,28 @@ django-bootstrap4==2.0.1
 django-cors-headers==3.3.0
 django-extensions==2.2.9
 django-imagekit==4.0.2
+django-mysql==3.6.0
 django-rest-auth==0.9.5
 djangorestframework==3.11.0
+djangorestframework-jwt==1.11.0
 idna==2.9
 importlib-metadata==1.6.1
 ipython==7.15.0
 ipython-genutils==0.2.0
 jedi==0.17.0
+mysqlclient==1.4.6
 oauthlib==3.1.0
 parso==0.7.0
 pexpect==4.8.0
 pickleshare==0.7.5
 pilkit==2.0
 Pillow==7.1.2
+pkg-resources==0.0.0
+pprint==0.1
 prompt-toolkit==3.0.5
 ptyprocess==0.6.0
 Pygments==2.6.1
+PyJWT==1.7.1
 python-dotenv==0.13.0
 python3-openid==3.1.0
 pytz==2020.1
