--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+appnope==0.1.0
 asgiref==3.2.7
 backcall==0.2.0
 beautifulsoup4==4.9.1
@@ -12,6 +13,7 @@ django-bootstrap4==2.0.1
 django-cors-headers==3.3.0
 django-extensions==2.2.9
 django-imagekit==4.0.2
+django-mysql==3.6.0
 django-rest-auth==0.9.5
 djangorestframework==3.11.0
 idna==2.9
