--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,8 @@
     "vue": "^2.6.11",
     "vue-cookies": "^1.7.0",
     "vue-router": "^3.2.0",
-    "vuex": "^3.4.0"
+    "vuex": "^3.4.0",
+    "vuex-pagination": "^1.3.4"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.4.0",
